# nowplaying

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  module.nix  package-lock.json  package.json  server.js  tsconfig.json
.github/workflows/: build-docker-image.yml  nix.yml  release.yml
src/: index.ts  main.rs  track.rs
