[package]
name = "nowplaying"
version = "2.0.0"
description = "last.fm now playing"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
dotenvy = "0.15"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
